# artisan

./: .gitignore  build-doc  cmdgraph.py  development.rst  license.rst  pyproject.toml  readme.md  readme.rst  setup.py
_scratch/: 01-installation.rst  04-configuration.rst
artisan/: __init__.py  _artifacts.py  _cbor_io.py  _context.py  _fs_index.py  _http.py  _misc_io.py  _namespaces.py  _schemas.py  _targets.py  _ui
crafty/: _artifacts.py  _cli.py  _global_conf.py  _http.py  _namespaces.py  _schemas.py
doc/: 03-records.rst  conf.py
doc-src/: 00-index.rst  01-defining-artifact-types.rst  01-installation.rst  01-using-artisan.rst  02-commands.rst  02-instantiating-artifacts.rst  02-using-artisan-ui.rst  03-api-reference.rst  03-using-artisan-ui.rst  04-related-projects.rst  05-api.rst  05-related-projects.rst  06-related-packages.rst  api-reference.rst  conf.py  index.rst  using-artisan-ui.rst  using-artisan.rst
doc-src/_new/: api-reference.rst  generating-a-rest-api.rst  generating-an-html-ui.rst  index.rst  working-with-artifacts.rst  working-with-configurable-objects.rst
docs/: .buildinfo  01-installation.html  01-installation.rst  02-commands.html  03-records.html  04-configuration.html  05-api.html  05-api.rst  06-related-packages.html  api-reference.html  api-reference.rst  conf.py  generating-a-cli.rst  generating-a-rest-api.rst  generating-a-web-ui.rst  genindex.html  index.html  index.rst  objects.inv  related-projects.html  search.html  searchindex.js  using-artisan-ui.html  using-artisan.html  working-with-artifacts.rst  working-with-contexts.rst  working-with-targets.rst
docs/_modules/: artisan.html  cmdgraph.html  index.html
docs/_sources/: 03-records.rst.txt  04-configuration.rst.txt  index.rst.txt  using-artisan.rst.txt
python/: pyproject.toml  readme.rst  setup.py
python/artisan/: __init__.py  _artifacts.py  _artisan.py  _configurable.py  _configurables.py  _global_conf.py  _http.py  _namespaces.py  _schemas.py
python/doc-src/: 03-records.rst  index.rst
python/tests/: shared_defs.py  test_artifacts.py  test_artisan.py  test_configurable.py  test_configurables.py  test_global_conf.py  test_namespaces.py  test_schemas.py
tests/: conftest.py  test_artifacts.py  test_cbor_io.py  test_context.py  test_fs_index.py  test_http.py  test_misc_io.py  test_namespaces.py  test_schemas.py  test_targets.py
ui/: cli  index.css  index.html  index.tsx  package.json  readme.md  rollup.config.js  tsconfig.json
ui/client/: app.tsx  (+7 more)
(+5 files in other folders)
