[tool.poetry]
name = "artisan"
version = "0.2.0"
description = "A build system for explainable science"
license = "MIT"
authors = ["Mason McGill <mmcgill@caltech.edu>"]
readme = "readme.md"

[tool.poetry.dependencies]
cbor2 = "*"
falcon = "*"
h5py = "*"
jsonschema = "*"
numpy = "*"
"ruamel.yaml" = "*"
toolz = "*"

[tool.poetry.dev-dependencies]
pytest = "*"